--- a/src/pages/Pets/createPet.css
+++ b/src/pages/Pets/createPet.css
@@ -5,7 +5,7 @@
 }
 
 .back-btn{
-  margin-bottom: 40px;
+  margin-top: 40px;
   margin-left: 100px;
   text-decoration: none;
   color: #282e09;
@@ -44,14 +44,14 @@
   margin-bottom: 50px;
 }
 
-.inputs-container{
+.CreatePet .inputs-container{
   display: flex;
   flex-direction: column;
   gap: 1.5em;
-  margin-bottom: 7em;
+  margin-bottom: 3em;
 }
 
-.input-createPet{
+.CreatePet .input-createPet{
   display: block;
   padding: .9em;
   background: var(--input-background);
@@ -63,11 +63,11 @@
   
 }
 
-.input-createPet::placeholder{
+.CreatePet .input-createPet::placeholder{
   color: rgb(226, 226, 189);
 }
 
-.btn-create{
+.CreatePet .btn-create{
   background-color: var(--btn-color);
   color: #fff;
   border: none;
@@ -78,7 +78,7 @@
   cursor: pointer;
 }
 
-.btn-create:hover{
+.CreatePet .btn-create:hover{
   background: rgba(209, 151, 16,.9);
 }
 
