--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -2,6 +2,7 @@
   --background-color:  #091A2E;
   --btn-color : #d19710;
   --input-background: #3B4859;
+  --btn-color-add: #B1C905;
 }
 
 .login-container{
