--- a/src/pages/NewClient/newClient.css
+++ b/src/pages/NewClient/newClient.css
@@ -7,21 +7,20 @@ input[type=number]::-webkit-inner-spin-button {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     background: rgba(209, 151, 16,.9);
 }
 
+.newClient-title-container__h1{
+    padding-bottom: 0.2em;
+}
+
 .newClient-form-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 1.5em;
     background-color: var(--background-color);
     color: #fff;
     width: 400px;
-    padding: 2em;
+    padding: 1.5em;
     border-radius: 8px;
     margin-bottom: 50px;
 }
@@ -31,7 +30,7 @@ input[type=number]::-webkit-inner-spin-button {
     display: flex;
     flex-direction: column;
     gap: .5em;
-    margin-bottom: 2em;
+    margin-bottom: .5em;
 }
 
 .newClient-input{
@@ -46,7 +45,6 @@ input[type=number]::-webkit-inner-spin-button {
 
 .newClient-input::placeholder{
     color: rgb(226, 226, 189);
-
 }
 
 .newClient-btn__add{
@@ -58,11 +56,13 @@ input[type=number]::-webkit-inner-spin-button {
     width: 100%;
     font-size: 1em;
     cursor: pointer;
+    margin-bottom: 1em;
 
 }
 
 .newClient-subtitle__h2{
     text-align: center;
+    margin-bottom: 0.3em;
 }
 
 .newClient-subtitle__h3{
@@ -86,46 +86,10 @@ input[type=number]::-webkit-inner-spin-button {
 
 .btn-registrar:hover{
     background: rgba(209, 151, 16,.9);
-
 }
 
-.newClient-owner-info__icon{
-    background-color: #fff;
-    color: red;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: center;
-    width: 22px;
-    border-radius: 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-.newClient-owner-info{
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--btn-color);
-    color: #fff;
-    border: none;
-    padding: .6em;
-    margin-bottom: .5em;
-    border-radius: 5px;
+.newClient-inputs-container textarea{
+    resize: none;
     width: 100%;
-    font-size: 1em;
-    cursor: pointer;
-}
-
-.newClient-owner-info:hover{
-    background: rgba(209, 151, 16,.9);
+    height: 100px;
 }
