--- a/src/pages/NewClient/newClient.css
+++ b/src/pages/NewClient/newClient.css
@@ -7,7 +7,7 @@ input[type=number]::-webkit-inner-spin-button {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: auto;
     width: 100vw;
     background: rgba(209, 151, 16,.9);
 }
