--- a/src/pages/PetView/petView.css
+++ b/src/pages/PetView/petView.css
@@ -1,13 +1,40 @@
-.petView{
-  background-color: #091A2E;
-  width: 400px;
-  color: white;
-  margin: 20px auto;
-  padding:3em;
-  padding-top: 2em;
+.back-btn{
+  margin-bottom: 40px;
+  margin-left: 100px;
+  text-decoration: none;
+  color: #091A2E;
+  background: #dddcaf;
+  padding: .6em 1em;
+  border-radius: 10px;
+  align-self: flex-start;
+}
+
+.back-btn:hover{
+  background: #968a6e;
+}
+
+.petView-container{
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  gap: .5em;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(209, 151, 16,.9);
+}
+
+.petView{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5em;
+  background-color: var(--background-color);
+  color: #fff;
+  width: 400px;
+  padding: 2em;
+  border-radius: 8px;
+  margin-bottom: 50px;
 }
 
 .petView h2{
@@ -15,17 +42,6 @@
   color: #D29812;
 }
 
-.petViewContainer a{
-  text-decoration: none;
-  color: antiquewhite;
-  background-color: rgb(185, 7, 7);
-  padding:1em;
-  margin: 1em;
-}
-
-.petViewContainer a:hover{
-  background-color: rgba(184, 21, 21, 0.95);
-}
 
 .petView h3{
   margin-top: 2em;
@@ -35,4 +51,10 @@
 .ownerPetView{
   display: flex;
   gap: 1em;flex-direction: column;
+}
+
+@media (max-width: 600px) {
+  .petView {
+    width:270px
+  }
 }
