--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -132,20 +132,20 @@ table {
 }
 
 thead th:nth-child(1) {
-  width: 20%;
+  width: 25%;
   font-size: 1em;
 }
 
 thead th:nth-child(2) {
-  width: 20%;
-}
-
-thead th:nth-child(3) {
   width: 25%;
 }
 
+thead th:nth-child(3) {
+  width: 10%;
+}
+
 thead th:nth-child(4) {
-  width: 5%;
+  width: 10%;
 }
 
 thead th:nth-child(5) {
@@ -154,7 +154,7 @@ thead th:nth-child(5) {
 
 th,
 td {
-  padding: 10px;
+  padding: 20px;
 }
 
 th {
@@ -207,30 +207,30 @@ tbody tr:nth-child(even) {
 
 .btn-pages-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content:center;
 }
 .btn-previous {
-  border: none;
-  background-color: #c5612b;
-  padding: 0.3em;
-  cursor: pointer;
+  background-color:  #f1471c;
+  border: 2px solid #f1471c;
+  border-radius: 3px;
+  color: white;
+  padding: 0.6em;
+  cursor:pointer;
+  margin-right: 15px;
 }
 
 .btn-next {
-  border: none;
-  background-color: #091a2e;
-  color: #fff;
-  padding: 0.3em;
+  background-color: rgba(9, 26, 46,.95);;
+  border: 2px solid rgba(9, 26, 46,.95);;
+  border-radius: 3px;
+  color: white;
+  padding: 0.6em;
   cursor: pointer;
 }
 
-.btn-next:hover {
-  background-color: rgba(9, 26, 46, 0.8);
-}
 
-.btn-previous:hover {
-  background-color: rgba(197, 97, 43, 0.8);
-}
+
+
 
 .btn-delete {
   border: none;
