--- a/src/pages/Dates/dates.css
+++ b/src/pages/Dates/dates.css
@@ -9,3 +9,34 @@
     display: flex;
     flex-direction: column;
 }
+
+.btnEdit{
+    display: block;
+    margin-bottom: 40px;
+    text-decoration: none;
+    color: #fff;
+    background: #D29812;
+    padding: .6em 1em;
+    margin-top: 30px;
+    border-radius: 10px;
+      
+}
+
+.infoContainer textarea{
+    resize: none;
+    width: 100%;
+    height: 80px;
+}
+
+.infoContainer label{
+    align-self: center;
+}
+
+.hora{
+    pointer-events: none;
+}
+
+.fecha{
+    border: 2px solid red;
+    cursor: pointer;
+}
