--- a/src/pages/Dates/dates.css
+++ b/src/pages/Dates/dates.css
@@ -1,42 +1,61 @@
-.datesCite{
- background-color: #fff;
- margin-bottom: 15px;
- border-radius: 3px;
- width: 80%;
+.datesCite {
+  background-color: #fff;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  width: 80%;
 }
 
-.citeContainer{
-    display: flex;
-    flex-direction: column;
+.citeContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
 }
 
-.btnEdit{
-    display: block;
-    margin-bottom: 40px;
-    text-decoration: none;
-    color: #fff;
-    background: #D29812;
-    padding: .6em 1em;
-    margin-top: 30px;
-    border-radius: 10px;
-      
+.btnEdit {
+  display: block;
+  margin-bottom: 40px;
+  text-decoration: none;
+  color: #fff;
+  background: #d29812;
+  padding: 0.6em 1em;
+  margin-top: 30px;
+  border-radius: 10px;
 }
 
-.infoContainer textarea{
-    resize: none;
-    width: 100%;
-    height: 80px;
+.infoContainer-dates {
+  width: 100%;
 }
 
-.infoContainer label{
-    align-self: center;
+.infoContainer-dates textarea {
+  resize: none;
+  width: 100%;
+  height: 80px;
 }
 
-.hora{
-    pointer-events: none;
+.infoContainer label {
+  align-self: center;
 }
 
-.fecha{
-    border: 2px solid red;
-    cursor: pointer;
+.hora {
+  pointer-events: none;
+}
+
+.back-btn-dates {
+  margin-top: 40px;
+  margin-left: 100px;
+  text-decoration: none;
+  color: #091a2e;
+  background: #dddcaf;
+  padding: 0.6em 1em;
+  border-radius: 10px;
+  width: max-content;
+}
+
+.back-btn-dates:hover {
+  background: #968a6e;
+}
+
+.dates-flex {
+  display: flex;
+  flex-direction: column;
 }
